Revision history for html-autotag-ruby

0.0.11

0.0.10
    - implemented lambda/proc for dynamic and tag params

0.0.9
    - implemented Dynamic Tags by headings
    - handle invalid fill params more gracefully

0.0.8
    - implemented fill param
    - "defactored" HTML Encoding into this module
    - refactored out default {} for attrs (HTML::AutoAttr handles them)
    - require HTML::AutoTag v1.0.6

0.0.7
    - fix Ruby dependecy

0.0.6
    - implemented empty param
    - implemented encodes param
    - implemented row padding and truncation

0.0.5
    - moved docs to README (trying to render for rubydoc.info site)
    - just a note -- having a very hard time learning how to document ruby

0.0.4
    - added docs location to gemspec

0.0.3
    - added docs (hopefully in the right place)

0.0.2
    - no real changes, just ensuring that all new files are published

0.0.1
    - First version, released on an unsuspecting world.