@@ -1,6 +1,7 @@
 Revision history for html-autotag-ruby
 
 0.0.11
+    - added caption param
 
 0.0.10
     - implemented lambda/proc for dynamic and tag params
